k8s-manifests/controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-controller
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-controller
    spec:
      serviceAccountName: jenkins-controller
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk11
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /mnt/jenkins_home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
