k8s-manifests/controller-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jenkins-dev.company.com
      secretName: company-tls-secret
  rules:
    - host: jenkins-dev.company.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jenkins-controller
                port:
                  number: 8080
